# rexo

./: 404.html  CHANGELOG.md  CMakeLists.txt  CODE-OF-CONDUCT.md  Makefile  README.md  compile-time-configuration.html  getting-started.html  gotchas.html  guides.html  index.html  print.html  searchindex.js  searchindex.json
.github/workflows/: doc.yml  test.yml
css/: custom.css
design/: auto-registration.html  index.html  options.html
doc/: book.toml
doc/src/: SUMMARY.md  compile-time-configuration.md  getting-started.md  gotchas.md  guides.md  index.md
doc/src/design/: auto-registration.md  index.md  options.md
doc/src/reference/: assertions.md  building-blocks.md  constants.md  framework.md  index.md  runner.md
examples/: fixture.c
include/: rexo.h
include/rexo/: rexo.h
js/: custom.js
reference/: assertions.html  building-blocks.html  constants.html  framework.html  index.html  runner.html
tests/: assertion-coverage.c  assertion-failure-messages.c  compat-c89.c  config-inherit.c  config-skip.c  conformance.c  empty.c  example.c  explicit.c  fixture-data-only.c  fixture-void.c  fixture.c  minimal.c  no-discovery.c  run-empty.c  run-explicit.c  run-fixture.c  run-minimal.c  run-semi-explicit-1.c  run-semi-explicit-2.c  run-semi-explicit.c  semi-explicit.c
tests/c89/: assertion-coverage.c  assertion-failure-messages.c  config-inherit.c  fixture-void.c  fixture.c  minimal.c
tests/cpp98/: assertion-coverage.cpp  assertion-failure-messages.cpp  config-inherit.cpp  fixture.cpp  minimal.cpp
tools/: generate-assertion-macros.py
